<resources>
    <string name="app_name">Audio Player</string>
    <string name="back_button_text">Back</string>
    <string name="play_button_text">Play</string>
    <string name="forward_button_text">Forward</string>
    <string name="song_title_text">Song Title</string>
    <string name="song_artist_text">Artist Name</string>
    <string name="current_time_text">Current Time</string>
    <string name="total_time_text">Total Time</string>
    <string name="image_cover_text">Image Cover</string>
    <string name="select_file_text">Select File</string>

    <string-array name="playback_speeds">
        <item>0.50x</item>
        <item>0.75x</item>
        <item>1.00x</item>
        <item>1.25x</item>
        <item>1.50x</item>
        <item>1.75x</item>
        <item>2.00x</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>